--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -133,6 +133,7 @@
 		\item $\alert{M(u)}=u(1-u)$ degenerate mobility function.
 		\item $u$ \structure{minimizes energy functional}:
 		$$\alert{E(u(t))}\coloneqq\frac{\varepsilon^2}{2}\int_\Omega|\nabla u(t)|^2dx+\int_\Omega F(u(t))dx.$$
+		\item \structure{Applications:} tumor tissues, image processing, multi-phase fluid systems, etc.
 	\end{itemize}
 \end{frame}
 
