--- a/presentation/references.bib
+++ b/presentation/references.bib
@@ -19,11 +19,16 @@
 	pages = {3--24}
 }
 
-@article{acosta2021upwind,
-	title={An upwind {DG} scheme preserving the maximum principle for the convective {Cahn}-{Hilliard} model},
-	author={Acosta-Soba, Daniel and Guill{\'e}n-Gonz{\'a}lez, Francisco and Rodr{\'\i}guez-Galv{\'a}n, J Rafael},
-	journal={arXiv preprint arXiv:2111.07313},
-	year={2021}
+@article{acosta-soba_upwind_2022,
+	title = {An upwind {DG} scheme preserving the maximum principle for the convective {Cahn}--{Hilliard} model},
+	doi = {10.1007/s11075-022-01355-2},
+	abstract = {The design of numerical approximations of the Cahn-Hilliard model preserving the maximum principle is a challenging problem, even more if considering additional transport terms. In this work, we present a new upwind discontinuous Galerkin scheme for the convective Cahn-Hilliard model with degenerate mobility which preserves the maximum principle and prevents non-physical spurious oscillations. Furthermore, we show some numerical experiments in agreement with the previous theoretical results. Finally, numerical comparisons with other schemes found in the literature are also carried out.},
+	language = {en},
+	journal = {Numerical Algorithms},
+	author = {Acosta-Soba, Daniel and Guillén-González, Francisco and Rodríguez-Galván, J. Rafael},
+	month = aug,
+	year = {2022},
+	file = {Acosta-Soba et al. - 2022 - An upwind DG scheme preserving the maximum princip.pdf:/Users/daniel/Zotero/storage/ZED6ERZE/Acosta-Soba et al. - 2022 - An upwind DG scheme preserving the maximum princip.pdf:application/pdf},
 }
 
 @article{mazen_saad_2014,
